1.新增网格交易机器人

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@inquirer/prompts": "^4.3.0",
+    "dotenv": "^16.4.5",
     "got": "^11.8.2",
     "qs": "^6.11.2",
     "ws": "^8.16.0"
